End of Video 14, recyclers added, everything seems to work fine.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/logDisplayTextView"
-        android:layout_width="390dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dip"
-        android:padding="8dp"
-        android:text="Hello World!"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/logDisplayRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="16dp"
+        android:padding="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/gymlog_recycler_item" />
 
     <TextView
         android:id="@+id/exerciseLabelTextView"
@@ -27,19 +28,19 @@
         android:text="@string/exercise"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logDisplayTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/logDisplayRecyclerView" />
 
     <EditText
         android:id="@+id/exerciseInputEditText"
         android:layout_width="273dp"
         android:layout_height="39dp"
-        android:layout_marginStart="112dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:hint="@string/enter_an_exercise"
         android:inputType="textAutoComplete"
         android:padding="8dp"
         app:layout_constraintStart_toStartOf="@+id/exerciseLabelTextView"
-        app:layout_constraintTop_toBottomOf="@+id/logDisplayTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/logDisplayRecyclerView" />
 
     <TextView
         android:id="@+id/weightLabelTextView"
